test/compilable/imports/test9896a.d
module imports.test9896a;

int square(int x)
{
    return x * x;
}
